test_regress/t/t_const_number_bad.out
%Error: t/t_const_number_bad.v:9:28: Number is missing value digits: 32'd
    9 |   parameter integer FOO2 = 32'd-6;   
      |                            ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_const_number_bad.v:10:28: Number is missing value digits: 32'd
   10 |   parameter integer FOO3 = 32'd;
      |                            ^~~~
%Error: t/t_const_number_bad.v:11:28: Number is missing value digits: 32'h
   11 |   parameter integer FOO4 = 32'h;
      |                            ^~~~
%Error: t/t_const_number_bad.v:13:28: Illegal character in binary constant: 2
   13 |   parameter integer FOO5 = 32'b2;
      |                            ^~~~~
%Error: t/t_const_number_bad.v:14:28: Illegal character in octal constant
   14 |   parameter integer FOO6 = 32'o8;
      |                            ^~~~~
%Error: t/t_const_number_bad.v:17:32: Illegal character in binary constant: 4
   17 |   parameter logic [3:0] FOO7 = 1'b1?4'hF:4'h1;   
      |                                ^~~~~~
%Error: t/t_const_number_bad.v:17:32: Too many digits for 1 bit number: '1'b1?4'
   17 |   parameter logic [3:0] FOO7 = 1'b1?4'hF:4'h1;   
      |                                ^~~~~~
%Error: t/t_const_number_bad.v:17:38: syntax error, unexpected INTEGER NUMBER, expecting ';'
   17 |   parameter logic [3:0] FOO7 = 1'b1?4'hF:4'h1;   
      |                                      ^~~
%Error: Exiting due to
